--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,13 @@ edition = "2024"
 [dependencies]
 itertools = "0.14.0"
 itoa = "1.0.15"
+rayon = "1.11.0"
 rstest = "0.26.1"
+rustc-hash = "2.1.1"
 
+[dev-dependencies]
+divan = "0.1.21"
+
+[[bench]]
+name = "combined" # in future, i should make it a workspace project
+harness = false
